Sun May  2 13:39:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi.rb (CGI::NEEDS_BINMODE): check if O_BINARY is defined.
	  [ruby-core:29922]

	* lib/cgi.rb (CGI::NEEDS_BINMODE): check if O_BINARY value instead
	  of fragile check by platform name.

Sun May  2 07:38:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (dir_config): should not modify argument arrays
	  themselves.

Thu Apr 29 18:39:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/thwait.rb (ThreadsWait#join): refined rdoc again.
	  [ruby-core:29863] [ruby-dev:41092]

	* lib/thwait.rb (ThreadsWait#join): refined rdoc.  [ruby-core:29863]

Tue Apr 27 18:00:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): fixed typo.
	  [ruby-core:29809]

Tue Apr 27 15:21:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (ruby_description, ruby_copyright): unaligned and
	  optimized.

	* version.c (ruby_description, ruby_copyright): construct literals
	  statically even if string literal concatenation is not available.

Sun Apr 25 22:06:25 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (fetch_internal): do not quote message data item
	  names.  Thanks, Eric Hodel.  [ruby-core:23508]  backported form
	  trunk.

Sun Apr 25 21:36:41 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap (encode_utf7): encode & properly.  Thanks, Kengo
	  Matsuyama.  [ruby-dev:38063]  backported from trunk.

Sat Apr 24 13:06:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (get_arglen): skip the last terminator of argv before
	  checking environ.

	* ruby.c (get_arglen): duplicate environ area if setenv and unsetenv
	  are provided.

	* ruby.c (set_arg0): keep empty strings.

Sat Apr 24 09:44:40 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/yaml2byte.c (bytestring_append, bytestring_extend):
	  removed wrong extra assignments.  a patch from Marcus Rueckert
	  <darix AT opensu.se> at [ruby-core:29759].
